include(simulationTaskLib)
ADD_LIBRARY(${SIMULATION_TASKLIB_NAME} SHARED 
    Actuator.cpp
    ${SIMULATION_TASKLIB_SOURCES})

add_dependencies(${SIMULATION_TASKLIB_NAME}
    regen-typekit)


TARGET_LINK_LIBRARIES(${SIMULATION_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${SIMULATION_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${SIMULATION_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${SIMULATION_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${SIMULATION_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${SIMULATION_TASKLIB_HEADERS} MarsPlugin.hpp
    DESTINATION include/orocos/simulation)
